--- a/docker/aws/compose.yml
+++ b/docker/aws/compose.yml
@@ -19,7 +19,7 @@ version: '3.8'
 services:
 
   mpcnode0:
-    image: sbellem/hbswap:aws-0.0.21
+    image: sbellem/hbswap:aws-f512566ebf3153a88572a9d3a91ea1630683c7b4
     environment:
       NODE_ID: 0
       POA_KEYSTORE: /opt/poa/keystore
@@ -29,8 +29,8 @@ services:
       - target: 8080
         published: 8080
         x-aws-protocol: https
-        #volumes:
-        #  - data-p0:/opt/hbswap/data
+    #volumes:
+    #  - data-p0:/opt/hbswap/data
       #- persistence-p0:/usr/src/hbswap/Persistence
       #- player-data-p0:/usr/src/hbswap/Player-Data
       #- mpc-bytecodes:/usr/src/hbswap/Programs/Bytecode
@@ -45,7 +45,7 @@ services:
     command: ["bash", "mpc-node.sh"]
 
   mpcnode1:
-    image: sbellem/hbswap:aws-0.0.21
+    image: sbellem/hbswap:aws-f512566ebf3153a88572a9d3a91ea1630683c7b4
     environment:
       NODE_ID: 1
       POA_KEYSTORE: /opt/poa/keystore
@@ -55,8 +55,8 @@ services:
       - target: 8081
         published: 8081
         x-aws-protocol: https
-        #volumes:
-        #  - data-p1:/opt/hbswap/data
+    #volumes:
+    #  - data-p1:/opt/hbswap/data
       #- persistence-p1:/usr/src/hbswap/Persistence
       #- player-data-p1:/usr/src/hbswap/Player-Data
       #- mpc-bytecodes:/usr/src/hbswap/Programs/Bytecode
@@ -71,7 +71,7 @@ services:
     command: ["bash", "mpc-node.sh"]
 
   mpcnode2:
-    image: sbellem/hbswap:aws-0.0.21
+    image: sbellem/hbswap:aws-f512566ebf3153a88572a9d3a91ea1630683c7b4
     environment:
       NODE_ID: 2
       POA_KEYSTORE: /opt/poa/keystore
@@ -81,8 +81,8 @@ services:
       - target: 8082
         published: 8082
         x-aws-protocol: https
-        #volumes:
-        #  - data-p2:/opt/hbswap/data
+    #volumes:
+    #  - data-p2:/opt/hbswap/data
       #- persistence-p2:/usr/src/hbswap/Persistence
       #- player-data-p2:/usr/src/hbswap/Player-Data
       #- mpc-bytecodes:/usr/src/hbswap/Programs/Bytecode
@@ -97,7 +97,7 @@ services:
     command: ["bash", "mpc-node.sh"]
 
   mpcnode3:
-    image: sbellem/hbswap:aws-0.0.21
+    image: sbellem/hbswap:aws-f512566ebf3153a88572a9d3a91ea1630683c7b4
     environment:
       NODE_ID: 3
       POA_KEYSTORE: /opt/poa/keystore
@@ -107,8 +107,8 @@ services:
       - target: 8083
         published: 8083
         x-aws-protocol: https
-        #volumes:
-        #  - data-p3:/opt/hbswap/data
+    #volumes:
+    #  - data-p3:/opt/hbswap/data
       #- persistence-p3:/usr/src/hbswap/Persistence
       #- player-data-p3:/usr/src/hbswap/Player-Data
       #- mpc-bytecodes:/usr/src/hbswap/Programs/Bytecode
@@ -153,17 +153,8 @@ x-aws-cloudformation:
       Properties:
         #LoadBalancerArn: "arn:aws:elasticloadbalancing:eu-west-3:809684608753:loadbalancer/app/myloadbalancer/1e6f0dad53bd4979"
         Certificates:
-          # ratelang.org
-          #- CertificateArn: "arn:aws:acm:eu-west-3:809684608753:certificate/389bba7c-26b9-45a7-9da9-fefeae053045"
-          # honeybadgerswap.com
-          #- CertificateArn: "arn:aws:acm:eu-west-3:809684608753:certificate/a9a750d5-b2f9-4c6c-a85e-23d9dae7e126"
-          #- CertificateArn: "arn:aws:acm:eu-west-3:809684608753:certificate/62cba85a-242e-4215-afd9-7cee9f50b184"
           # www.honeybadgerswap.org
           - CertificateArn: "arn:aws:acm:eu-west-3:809684608753:certificate/411c840d-06c1-48c1-8a8c-8bb377f544fc"
-          # (galois,legendre,abel).honeybadgerswap.org
-          #- CertificateArn: "arn:aws:acm:ca-central-1:809684608753:certificate/ad92ab75-974c-4977-a530-9c73b023ec04"
-          # (quark).honeybadgerswap.org
-          #- CertificateArn: "arn:aws:acm:ca-central-1:809684608753:certificate/1c028ee9-4472-4bf8-8594-ae83c06f4af1"
         Protocol: HTTPS
       Type: AWS::ElasticLoadBalancingV2::Listener
     Mpcnode18081Listener:
